--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -11570,8 +11570,8 @@ a {
   object-fit: cover;
 }
 .cid-sfX5kL8HsL {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-top: 2rem;
+  padding-bottom: 0rem;
   background-color: #ffe161;
 }
 @media (max-width: 991px) {
@@ -11586,6 +11586,22 @@ a {
   .cid-sfX5kL8HsL .text-wrapper {
     padding: 2rem;
   }
+}
+.cid-sg4rbHx4Rd {
+  padding-top: 0rem;
+  padding-bottom: 3rem;
+  background-color: #ffe161;
+}
+@media (max-width: 991px) {
+  .cid-sg4rbHx4Rd .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sg4rbHx4Rd .row {
+  flex-direction: row-reverse;
+}
+.cid-sg4rbHx4Rd img {
+  width: 100%;
 }
 .cid-sg3UqAzrQG {
   padding-top: 2rem;
