--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -12212,6 +12212,55 @@ a {
     display: none !important;
   }
 }
+.cid-sgnDPdpTyF {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #ffe161;
+}
+.cid-sgnDPdpTyF .video-wrapper iframe {
+  width: 100%;
+}
+.cid-sgnDPdpTyF .mbr-section-title,
+.cid-sgnDPdpTyF .mbr-description {
+  text-align: center;
+}
+@media (min-width: 992px) {
+  .cid-sgnDPdpTyF .text-wrapper {
+    padding: 2rem;
+  }
+}
+.cid-sgnNDHD4Zi {
+  padding-top: 0rem;
+  padding-bottom: 2rem;
+  background-color: #ffe161;
+}
+@media (max-width: 991px) {
+  .cid-sgnNDHD4Zi .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sgnNDHD4Zi .row {
+  flex-direction: row-reverse;
+}
+.cid-sgnNDHD4Zi img {
+  width: 100%;
+}
+.cid-sgteGbuKhf {
+  padding-top: 2rem;
+  padding-bottom: 5rem;
+  background-color: #ffe161;
+}
+@media (max-width: 991px) {
+  .cid-sgteGbuKhf .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sgteGbuKhf .row {
+  flex-direction: row-reverse;
+}
+.cid-sgteGbuKhf img {
+  width: 100%;
+}
 .cid-s9LnWfdHXQ {
   padding-top: 3rem;
   padding-bottom: 2rem;
