--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -12212,26 +12212,32 @@ a {
     display: none !important;
   }
 }
-.cid-sgnDPdpTyF {
+.cid-sh08pZxz5t {
   padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding-bottom: 2rem;
   background-color: #ffe161;
 }
-.cid-sgnDPdpTyF .video-wrapper iframe {
+.cid-sh06VLrAC4 {
+  padding-top: 2rem;
+  padding-bottom: 0rem;
+  background-color: #ffe161;
+}
+@media (max-width: 991px) {
+  .cid-sh06VLrAC4 .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sh06VLrAC4 img {
   width: 100%;
 }
-.cid-sgnDPdpTyF .mbr-section-title,
-.cid-sgnDPdpTyF .mbr-description {
-  text-align: center;
-}
 @media (min-width: 992px) {
-  .cid-sgnDPdpTyF .text-wrapper {
+  .cid-sh06VLrAC4 .text-wrapper {
     padding: 2rem;
   }
 }
 .cid-sgnNDHD4Zi {
   padding-top: 0rem;
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
   background-color: #ffe161;
 }
 @media (max-width: 991px) {
@@ -12259,6 +12265,53 @@ a {
   flex-direction: row-reverse;
 }
 .cid-sgteGbuKhf img {
+  width: 100%;
+}
+.cid-sgK6JofqhW {
+  padding-top: 5rem;
+  padding-bottom: 0rem;
+  background-color: #fff0b0;
+}
+.cid-sgK6K6sGsf {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-color: #fff0b0;
+}
+.cid-sgK6GKD9d3 {
+  padding-top: 1rem;
+  padding-bottom: 3rem;
+  background-color: #fff0b0;
+}
+@media (max-width: 991px) {
+  .cid-sgK6GKD9d3 .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sgK6GKD9d3 .row {
+  flex-direction: row-reverse;
+}
+.cid-sgK6GKD9d3 img {
+  width: 100%;
+}
+.cid-sh00CUGQu7 {
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+  background-color: #ffe885;
+}
+.cid-sh00A91xgI {
+  padding-top: 2rem;
+  padding-bottom: 6rem;
+  background-color: #ffe885;
+}
+@media (max-width: 991px) {
+  .cid-sh00A91xgI .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-sh00A91xgI .row {
+  flex-direction: row-reverse;
+}
+.cid-sh00A91xgI img {
   width: 100%;
 }
 .cid-s9LnWfdHXQ {
