--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -12079,9 +12079,48 @@ a {
 .cid-sg4RHqvnTg {
   background-image: url("../../../assets/images/geometric-1732847-1920-1920x960.jpg");
 }
-.cid-sg4RMQywyJ {
+.cid-shdoomn3xI {
   padding-top: 5rem;
-  padding-bottom: 5rem;
+  padding-bottom: 0rem;
+  background-color: #cb82fe;
+}
+.cid-shdoqgvYub {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #cb82fe;
+}
+.cid-shdoqgvYub .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-shdoqgvYub .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-shdoqgvYub .counter-container ol li {
+  list-style: none;
+  padding-left: 1rem;
+  position: relative;
+}
+.cid-shdoqgvYub .counter-container ol li:before {
+  position: absolute;
+  left: -40px;
+  margin-top: 5px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  line-height: 40px;
+  transition: all .2s;
+  color: #000000;
+  background: #ffcc00;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-sg4RMQywyJ {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   background-color: #d6b0ff;
 }
 .cid-sg4RKlpF0C {
@@ -12214,7 +12253,7 @@ a {
 }
 .cid-sh08pZxz5t {
   padding-top: 3rem;
-  padding-bottom: 2rem;
+  padding-bottom: 0rem;
   background-color: #be61ff;
 }
 .cid-sh06VLrAC4 {
@@ -12253,7 +12292,7 @@ a {
 }
 .cid-sgteGbuKhf {
   padding-top: 2rem;
-  padding-bottom: 5rem;
+  padding-bottom: 3rem;
   background-color: #be61ff;
 }
 @media (max-width: 991px) {
@@ -12268,7 +12307,7 @@ a {
   width: 100%;
 }
 .cid-sgK6JofqhW {
-  padding-top: 5rem;
+  padding-top: 4rem;
   padding-bottom: 0rem;
   background-color: #ecb0ff;
 }
@@ -12313,6 +12352,70 @@ a {
 }
 .cid-sh00A91xgI img {
   width: 100%;
+}
+.cid-shd5PaIZpz {
+  padding-top: 3rem;
+  padding-bottom: 0rem;
+  background-color: #482767;
+}
+.cid-shd5PaIZpz .mbr-text {
+  color: #ffffff;
+}
+.cid-shd5PaIZpz .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-shd5UEHs9i {
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+  background-color: #482767;
+}
+@media (max-width: 991px) {
+  .cid-shd5UEHs9i .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-shd5UEHs9i .row {
+  flex-direction: row-reverse;
+}
+.cid-shd5UEHs9i img {
+  width: 100%;
+}
+.cid-shd5UEHs9i .mbr-description {
+  color: #ffffff;
+}
+.cid-shdyUZbU4e {
+  padding-top: 5rem;
+  padding-bottom: 1rem;
+  background-color: #a18bb5;
+}
+.cid-shdzo1lBO8 {
+  padding-top: 0rem;
+  padding-bottom: 5rem;
+  background-color: #a18bb5;
+}
+.cid-shdzo1lBO8 .counter-container ul {
+  margin-bottom: 0;
+}
+.cid-shdzo1lBO8 .counter-container ul li {
+  padding-left: 1rem;
+  margin-bottom: 1rem;
+  list-style: none;
+  position: relative;
+}
+.cid-shdzo1lBO8 .counter-container ul li:before {
+  position: absolute;
+  left: -40px;
+  content: '';
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #000000;
+  background-color: #ffcc00;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-top: 5px;
+  content: '✓';
 }
 .cid-sh1EQ4vIuh {
   padding-top: 3rem;
