--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -12390,7 +12390,7 @@ a {
 }
 .cid-shdzo1lBO8 {
   padding-top: 0rem;
-  padding-bottom: 5rem;
+  padding-bottom: 2rem;
   background-color: #a18bb5;
 }
 .cid-shdzo1lBO8 .counter-container ul {
@@ -12416,6 +12416,38 @@ a {
   border-radius: 50%;
   margin-top: 5px;
   content: '✓';
+}
+.cid-shhlDINnRP {
+  padding-top: 2rem;
+  padding-bottom: 6rem;
+  background-color: #a18bb5;
+}
+@media (max-width: 991px) {
+  .cid-shhlDINnRP .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-shhlDINnRP .row {
+  flex-direction: row-reverse;
+}
+.cid-shhlDINnRP img {
+  width: 100%;
+}
+.cid-shhpPXDk6r {
+  padding-top: 0rem;
+  padding-bottom: 3rem;
+  background-color: #a18bb5;
+}
+@media (max-width: 991px) {
+  .cid-shhpPXDk6r .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-shhpPXDk6r .row {
+  flex-direction: row-reverse;
+}
+.cid-shhpPXDk6r img {
+  width: 100%;
 }
 .cid-sh1EQ4vIuh {
   padding-top: 3rem;
