--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -12499,10 +12499,22 @@ a {
 .cid-sgK6GKD9d3 img {
   width: 100%;
 }
-.cid-sh00CUGQu7 {
-  padding-top: 2rem;
-  padding-bottom: 1rem;
+.cid-shoeQBOjUR {
+  padding-top: 3rem;
+  padding-bottom: 2rem;
   background-color: #be61ff;
+}
+.cid-shoeQBOjUR .video-wrapper iframe {
+  width: 100%;
+}
+.cid-shoeQBOjUR .mbr-section-title,
+.cid-shoeQBOjUR .mbr-description {
+  text-align: center;
+}
+@media (min-width: 992px) {
+  .cid-shoeQBOjUR .text-wrapper {
+    padding: 2rem;
+  }
 }
 .cid-sh00A91xgI {
   padding-top: 2rem;
@@ -12583,134 +12595,6 @@ a {
   border-radius: 50%;
   margin-top: 5px;
   content: '✓';
-}
-.cid-sho5vyoxOZ {
-  padding-top: 0rem;
-  padding-bottom: 2rem;
-  background-color: #482767;
-}
-.cid-sho5vyoxOZ .mbr-overlay {
-  z-index: 1;
-}
-@media (min-width: 992px) {
-  .cid-sho5vyoxOZ .carousel {
-    min-height: 600px;
-  }
-  .cid-sho5vyoxOZ .carousel img {
-    max-height: 600px;
-    object-fit: contain;
-  }
-}
-@media (max-width: 991px) and (min-width: 768px) {
-  .cid-sho5vyoxOZ .carousel {
-    min-height: 390px;
-  }
-  .cid-sho5vyoxOZ .carousel img {
-    max-height: 390px;
-    object-fit: contain;
-  }
-}
-@media (max-width: 767px) {
-  .cid-sho5vyoxOZ .carousel {
-    min-height: 330px;
-  }
-  .cid-sho5vyoxOZ .carousel img {
-    max-height: 330px;
-    object-fit: contain;
-  }
-  .cid-sho5vyoxOZ .container .carousel-control {
-    margin-bottom: 0;
-  }
-  .cid-sho5vyoxOZ .content-slider-wrap {
-    width: 100% !important;
-  }
-}
-.cid-sho5vyoxOZ .carousel,
-.cid-sho5vyoxOZ .carousel-inner {
-  display: flex;
-  align-items: center;
-}
-.cid-sho5vyoxOZ .item-wrapper {
-  width: 100%;
-}
-.cid-sho5vyoxOZ .carousel-caption {
-  bottom: 40px;
-}
-.cid-sho5vyoxOZ .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-.cid-sho5vyoxOZ .mobi-mbri-arrow-next {
-  margin-left: 5px;
-}
-.cid-sho5vyoxOZ .mobi-mbri-arrow-prev {
-  margin-right: 5px;
-}
-.cid-sho5vyoxOZ .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-.cid-sho5vyoxOZ .carousel-control {
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-.cid-sho5vyoxOZ .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-sho5vyoxOZ .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-sho5vyoxOZ .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-sho5vyoxOZ .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 1.5rem !important;
-}
-.cid-sho5vyoxOZ .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
-}
-.cid-sho5vyoxOZ .carousel-indicators li.active,
-.cid-sho5vyoxOZ .carousel-indicators li:hover {
-  opacity: 0.9;
-}
-.cid-sho5vyoxOZ .carousel-indicators li::after,
-.cid-sho5vyoxOZ .carousel-indicators li::before {
-  content: none;
-}
-.cid-sho5vyoxOZ .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 768px) {
-  .cid-sho5vyoxOZ .carousel-indicators {
-    display: none !important;
-  }
 }
 .cid-shobSoed3H {
   padding-top: 1rem;
