--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -12727,36 +12727,20 @@ a {
 .cid-shobSoed3H H5 {
   color: #000000;
 }
-.cid-shhlDINnRP {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.cid-shomymQLGB {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
   background-color: #a18bb5;
 }
 @media (max-width: 991px) {
-  .cid-shhlDINnRP .image-wrapper {
+  .cid-shomymQLGB .image-wrapper {
     margin-bottom: 1rem;
   }
 }
-.cid-shhlDINnRP .row {
+.cid-shomymQLGB .row {
   flex-direction: row-reverse;
 }
-.cid-shhlDINnRP img {
-  width: 100%;
-}
-.cid-shhpPXDk6r {
-  padding-top: 0rem;
-  padding-bottom: 3rem;
-  background-color: #a18bb5;
-}
-@media (max-width: 991px) {
-  .cid-shhpPXDk6r .image-wrapper {
-    margin-bottom: 1rem;
-  }
-}
-.cid-shhpPXDk6r .row {
-  flex-direction: row-reverse;
-}
-.cid-shhpPXDk6r img {
+.cid-shomymQLGB img {
   width: 100%;
 }
 .cid-sh1EQ4vIuh {
