create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -13486,6 +13486,94 @@ a {
     padding: 2rem;
   }
 }
+.cid-shTyTxrWAv {
+  padding-top: 3rem;
+  padding-bottom: 0rem;
+  background-color: #482767;
+}
+.cid-shTyTxrWAv .mbr-section-title {
+  color: #ffffff;
+}
+.cid-shTyTxrWAv .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-shTyWnfdI0 {
+  padding-top: 3rem;
+  padding-bottom: 6rem;
+  background-color: #482767;
+}
+@media (max-width: 991px) {
+  .cid-shTyWnfdI0 .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-shTyWnfdI0 .row {
+  flex-direction: row-reverse;
+}
+.cid-shTyWnfdI0 img {
+  width: 100%;
+}
+.cid-shTyWnfdI0 .mbr-description {
+  color: #ffffff;
+}
+.cid-shTIesUYze {
+  padding-top: 5rem;
+  padding-bottom: 0rem;
+  background-color: #deaeff;
+}
+.cid-shTIf1svt4 {
+  padding-top: 2rem;
+  padding-bottom: 0rem;
+  background-color: #deaeff;
+}
+.cid-shTIJrUE4n {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #deaeff;
+}
+@media (max-width: 991px) {
+  .cid-shTIJrUE4n .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-shTIJrUE4n .row {
+  flex-direction: row-reverse;
+}
+.cid-shTIJrUE4n img {
+  width: 100%;
+}
+.cid-shVV5XfIW0 {
+  padding-top: 5rem;
+  padding-bottom: 0rem;
+  background-color: #a18bb5;
+}
+.cid-shVV5XfIW0 .mbr-section-title {
+  color: #f1deff;
+}
+.cid-shVVqMDDzt {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #a18bb5;
+}
+.cid-shVVqMDDzt .mbr-text {
+  color: #f1deff;
+}
+.cid-shVV2NhF0b {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #a18bb5;
+}
+@media (max-width: 991px) {
+  .cid-shVV2NhF0b .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-shVV2NhF0b .row {
+  flex-direction: row-reverse;
+}
+.cid-shVV2NhF0b img {
+  width: 100%;
+}
 .cid-s9LnWfdHXQ {
   padding-top: 3rem;
   padding-bottom: 2rem;
