--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -13499,7 +13499,7 @@ a {
 }
 .cid-shTyWnfdI0 {
   padding-top: 3rem;
-  padding-bottom: 6rem;
+  padding-bottom: 2rem;
   background-color: #482767;
 }
 @media (max-width: 991px) {
@@ -13514,6 +13514,14 @@ a {
   width: 100%;
 }
 .cid-shTyWnfdI0 .mbr-description {
+  color: #ffffff;
+}
+.cid-shWujuq5g9 {
+  padding-top: 0rem;
+  padding-bottom: 2rem;
+  background-color: #482767;
+}
+.cid-shWujuq5g9 .mbr-text {
   color: #ffffff;
 }
 .cid-shTIesUYze {
@@ -13543,7 +13551,7 @@ a {
   width: 100%;
 }
 .cid-shVV5XfIW0 {
-  padding-top: 5rem;
+  padding-top: 2rem;
   padding-bottom: 0rem;
   background-color: #a18bb5;
 }
@@ -13557,6 +13565,25 @@ a {
 }
 .cid-shVVqMDDzt .mbr-text {
   color: #f1deff;
+}
+.cid-shWsitovUR {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #a18bb5;
+}
+@media (max-width: 991px) {
+  .cid-shWsitovUR .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-shWsitovUR .row {
+  flex-direction: row-reverse;
+}
+.cid-shWsitovUR img {
+  width: 100%;
+}
+.cid-shWsitovUR .mbr-description {
+  color: #ffffff;
 }
 .cid-shVV2NhF0b {
   padding-top: 3rem;
@@ -13573,6 +13600,45 @@ a {
 }
 .cid-shVV2NhF0b img {
   width: 100%;
+}
+.cid-shVV2NhF0b .mbr-description {
+  color: #ffffff;
+}
+.cid-shWk01YLPe {
+  padding-top: 5rem;
+  padding-bottom: 0rem;
+  background-color: #cb82fe;
+}
+.cid-shWtlVavcf {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #cb82fe;
+}
+@media (max-width: 991px) {
+  .cid-shWtlVavcf .image-wrapper {
+    margin-bottom: 1rem;
+  }
+}
+.cid-shWtlVavcf .row {
+  flex-direction: row-reverse;
+}
+.cid-shWtlVavcf img {
+  width: 100%;
+}
+.cid-shWuOlQ8wS {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #571164;
+}
+.cid-shWuOlQ8wS .mbr-section-subtitle {
+  text-align: center;
+}
+.cid-shWuOlQ8wS .mbr-section-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-shWuOlQ8wS .mbr-text {
+  color: #ffffff;
 }
 .cid-s9LnWfdHXQ {
   padding-top: 3rem;
