create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -13625,6 +13625,72 @@ a {
 .cid-shWtlVavcf img {
   width: 100%;
 }
+.cid-si2ljwtZ53 {
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+  background-color: #a26cc9;
+}
+.cid-si2ljwtZ53 .mbr-section-title {
+  text-align: center;
+  color: #ffffff;
+}
+.cid-si2ljwtZ53 .mbr-text {
+  color: #ffffff;
+}
+.cid-si2nFvYTJU {
+  padding-top: 3rem;
+  padding-bottom: 1rem;
+  background-color: #a26cc9;
+}
+.cid-si2nFvYTJU .image-wrapper {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-top: 5px;
+  margin-right: 1rem;
+  overflow: hidden;
+}
+.cid-si2nFvYTJU .image-wrapper img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.cid-si2nFvYTJU .mbr-section-title {
+  color: #ffffff;
+}
+.cid-si2nFvYTJU .mbr-text {
+  color: #ffffff;
+}
+.cid-si2nFvYTJU .name {
+  color: #ffffff;
+}
+.cid-si2oYBzC7q {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  background-color: #a26cc9;
+}
+.cid-si2oYBzC7q .image-wrapper {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-top: 5px;
+  margin-right: 1rem;
+  overflow: hidden;
+}
+.cid-si2oYBzC7q .image-wrapper img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.cid-si2oYBzC7q .mbr-section-title {
+  color: #ffffff;
+}
+.cid-si2oYBzC7q .mbr-text {
+  color: #ffffff;
+}
+.cid-si2oYBzC7q .name {
+  color: #ffffff;
+}
 .cid-shWuOlQ8wS {
   padding-top: 3rem;
   padding-bottom: 3rem;
