create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -13691,6 +13691,60 @@ a {
 .cid-si2oYBzC7q .name {
   color: #ffffff;
 }
+.cid-si2HlCrDGZ {
+  padding-top: 0rem;
+  padding-bottom: 3rem;
+  background-color: #a26cc9;
+}
+.cid-si2HlCrDGZ .image-wrapper {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-top: 5px;
+  margin-right: 1rem;
+  overflow: hidden;
+}
+.cid-si2HlCrDGZ .image-wrapper img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.cid-si2HlCrDGZ .mbr-section-title {
+  color: #ffffff;
+}
+.cid-si2HlCrDGZ .mbr-text {
+  color: #ffffff;
+}
+.cid-si2HlCrDGZ .name {
+  color: #ffffff;
+}
+.cid-si2IFGgTrr {
+  padding-top: 1rem;
+  padding-bottom: 3rem;
+  background-color: #a26cc9;
+}
+.cid-si2IFGgTrr .image-wrapper {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-top: 5px;
+  margin-right: 1rem;
+  overflow: hidden;
+}
+.cid-si2IFGgTrr .image-wrapper img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.cid-si2IFGgTrr .mbr-section-title {
+  color: #ffffff;
+}
+.cid-si2IFGgTrr .mbr-text {
+  color: #ffffff;
+}
+.cid-si2IFGgTrr .name {
+  color: #ffffff;
+}
 .cid-shWuOlQ8wS {
   padding-top: 3rem;
   padding-bottom: 3rem;
