create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -14133,6 +14133,30 @@ a {
     text-align: center;
   }
 }
+.cid-sixXr3csdK {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #571164;
+}
+.cid-sixXr3csdK .video-wrapper iframe {
+  width: 100%;
+}
+.cid-sixXr3csdK .mbr-section-title,
+.cid-sixXr3csdK .mbr-section-subtitle,
+.cid-sixXr3csdK .mbr-text {
+  text-align: center;
+}
+.cid-sixXr3csdK .mbr-section-title {
+  color: #ffffff;
+}
+.cid-sixXr3csdK .mbr-section-subtitle {
+  color: #ffffff;
+}
+.cid-siy6xhRfXF {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #a18bb5;
+}
 .cid-s9LnWfdHXQ {
   padding-top: 3rem;
   padding-bottom: 2rem;
