create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -14341,6 +14341,22 @@ a {
 .cid-sjdazHbES2 img {
   width: 100%;
 }
+.cid-sjmx0RrHdz {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: #8e50ba;
+}
+.cid-sjmx0RrHdz .mbr-section-title,
+.cid-sjmx0RrHdz .mbr-text,
+.cid-sjmx0RrHdz .mbr-section-btn {
+  text-align: center;
+}
+.cid-sjmx0RrHdz .video-wrapper {
+  margin: auto;
+}
+.cid-sjmx0RrHdz .video-wrapper iframe {
+  width: 100%;
+}
 .cid-s9LnWfdHXQ {
   padding-top: 3rem;
   padding-bottom: 2rem;
